--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,21 @@
 	        <scope>runtime</scope>
     	</dependency>
     	<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+    	<dependency>
     		<groupId>org.mariadb.jdbc</groupId>
     		<artifactId>mariadb-java-client</artifactId>
     	</dependency>
     	<dependency>
  		    <groupId>org.springframework.boot</groupId>
   		    <artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>  
+			<groupId>io.jsonwebtoken</groupId> 
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 	</dependencies>
 
