--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.basePath=/api
+
+spring.security.user.name=biglol
+spring.security.user.password=asdfQWER
+spring.security.user.roles=admin
