--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,14 @@
 	<groupId>com.biglolPage</groupId>
 	<artifactId>introducingBiglolPage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>introducingBiglolPage</name>
 	<description>Spring Boot Project for Biglol&apos;s Page</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +61,11 @@
 			<groupId>io.jsonwebtoken</groupId> 
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+	   	    <groupId>org.springframework.boot</groupId>
+	   	    <artifactId>spring-boot-starter-tomcat</artifactId>
+	   	    <scope>provided</scope>
 		</dependency>
 	</dependencies>
 
