--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.data.rest.basePath=/api
 
-spring.security.user.name=biglol
-
-spring.security.user.roles=admin
+#spring.security.user.name=biglol
+#
+#spring.security.user.roles=admin
